more frontend functionality added

--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,7 @@ html {
 /* home section styling */
 .home {
   display: flex;
-  background: url("daniel-sessler-p_3j4nZpZw4-unsplash.jpg") no-repeat center;
-
+  gool
   height: 100vh;
   color: #fff;
   min-height: 500px;
